--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset='UTF-8'>
         <title>Chess</title>
+        <link rel='stylesheet' href='styles.css'>
     </head>
     <body>
         <script src="//cdn.jsdelivr.net/npm/phaser@3.52.0/dist/phaser.js"></script>
